[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nhs_data_cleansing"
version = "0.1.0-a4"
description = "Common NHS Python (PySpark) functions for data cleansing"
authors = [{name = "Sam Hollings", email = "sam.hollings1@nhs.net"}]
readme = "README.md"
keywords = ["PySpark", "cleansing", "validation", "data engineering"]
license = {file = "LICENCE.md"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "inflection",
    "pyspark",
    "pandas",
    "pytest",
    "pytest-spark",
    "black",
    "isort",
    "build",
    "setuptools-scm",
]
dynamic = ['version']

[project.urls]
Repository = "https://github.com/SamHollings/nhs_data_cleansing"
Issues = "https://github.com/SamHollings/nhs_data_cleansing/issues"

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-v",
    "--doctest-modules",
    "--doctest-report=cdiff",
    "--doctest-continue-on-failure"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "tests",
    "src"
]
