[metadata]
name = nhs_data_cleansing
version = 0.1.0-alpha
author = ####
author_email = ####
description = Common NHS Python (PySpark) functions for data cleansing 
long_description = Common NHS Python (PySpark) functions for data cleansing 
# url = ###
keywords = PySpark, cleansing, validation, data engineering
license = MIT
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
install_requires = file:requirements.txt
packages=find:
package_dir=
    =src

[options.packages.find]
where=src